[QuangHV7]: Create Swaager API for To-Do-Quiz
